<resources>
    <!--App name-->
    <string name="app_name">Nhà Trọ TDMU</string>

    <!--String Behavior BottomSheet-->
    <string name="BackDropBottomSheetBehavior">khangit96.tdmuteamfhome.lib.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">khangit96.tdmuteamfhome.lib.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">khangit96.tdmuteamfhome.lib.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">khangit96.tdmuteamfhome.lib.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">khangit96.tdmuteamfhome.lib.ScrollingAppBarLayoutBehavior</string>
    <string name="key_binding_default_toolbar_name">Modal-Toolbar-Title</string>

    <!---->
    <string name="detailInformation">Thông tin chi tiết</string>
    <string name="contact">Liên hệ</string>
    <string name="share">Chia sẻ</string>
    <string name="review">Nhận xét</string>
    <!---->
    <string name="housePrice">Giá phòng: %s vnđ/tháng </string>
    <string name="waterPrice">Giá nước: %s vnd/khối</string>
    <string name="electricPrice">Giá điện: %s vnđ/kw</string>
    <string name="phone">Số điện thoại: %s</string>
    <string name="address">Địa chỉ: %s</string>
    <string name="nameOfOwnHouse">Tên chủ hộ: %s</string>
    <string name="sizeOfHouse">Diện tích: %s</string>
    <string name="timeOpen">Thời gian mở cửa: %s</string>
    <string name="timeClose">Thời gian đóng cửa: %s</string>
    <string name="housetStatus">Tình trang: %s</string>
    <string name="updatingInformation">Đang cập nhật...</string>

    <!--facebook-->
    <string name="facebook_app_id">343572846013838</string>

    <!--activity-->
    <string name="addHouseActivity">Đăng Tin Nhà Trọ</string>
    <string name="reviewActivity">Nhận Xét</string>
    <string name="filterActivity">Bộ Lọc</string>
    <string name="HouseAreaActivity">Nhà trọ quanh đây</string>
    <!-- Màn hình giới thiệu -->
    <string name="about">Giới thiệu</string>
    <string name="feedback">Phản hồi</string>
    <string name="about_address_title">Địa chỉ:</string>
    <string name="about_address">"Khoa CNTT - ĐH Thủ Dầu Một
06 Trần Văn Ơn, TP. Thủ Dầu Một, Bình Dương"</string>
    <string name="about_copyright">© FHome Team - KCNTT - ĐH Thủ Dầu Một</string>
    <string name="about_description">Ứng dụng hỗ trợ các bạn sinh viên tìm kiếm các địa điểm thuê phòng trọ, mua sắm, ăn uống…</string>
    <string name="about_email_title">Email:</string>
    <string name="about_email" translatable="false">khoacntt@tdmu.edu.vn</string>
    <string name="about_phone_title">Điện thoại:</string>
    <string name="about_phone" translatable="false">(0650) 383 4930</string>
    <string name="about_version_title">Phiên bản:</string>
    <string name="about_version_dummy">1.0</string>
    <!-- Bootstrap Activity -->
    <string name="splash_initializing">Đang chuẩn bị cho lần chạy đầu tiên…</string>
    <string name="splash_initializing_error">Có lỗi khi khởi tạo dữ liệu :(</string>
    <string name="splash_status_processing">Đang tải dữ liệu [0/0]…</string>
    <string name="splash_status_processing_with_number" formatted="false">Đang tải dữ liệu [%d/%d]…</string>
    <string name="splash_status_welcome">Chào mừng bạn đến với ứng dụng tìm nhà trọ FHome :D</string>
    <string name="splash_status_welcome_back">Chào mừng bạn đã quay trở lại! :)</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

</resources>

